--- a/style.css
+++ b/style.css
@@ -46,3 +46,23 @@ nav ul li:hover{
     border-radius: 30px;
     background-image: url('logos/bg1.jpg');
 }
+.songlist h2{
+    padding: 15px;
+}
+#brand{
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+.bottom{
+    position: sticky;
+    height: 100px;
+    background-color: black; 
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color : white;
+    flex-direction: column;
+}
